test/compile_errors/err_defer_break.w
//! expect-check-fail: break not allowed in defer

fn bad_break:
    while true:
        defer:
            break
